--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,32 @@
 </ion-header>
 
 <ion-content padding>
-
+  <div text-center>
+    <h2 class="app-title">
+    <ion-icon
+              name="ios-medkit-outline"
+              class="icon-large"></ion-icon>
+              <br>
+      Medicine Quality Control (MCQ) Mobile</h2>
+  </div>
+  <p>This is a project from the Laura Architecture group.</p>
+  <p>See more on:</p>
+  <h5>
+    <ion-icon name="logo-github"></ion-icon> &nbsp;&nbsp; https://github.com/laura-architecture
+  </h5>
 </ion-content>
+
+<style>
+  .icon-large {
+    font-size: 4em
+  }
+
+  .app-title {
+    text-transform: uppercase;
+    background: blue;
+    color: white;
+    padding: .7em 0;
+    letter-spacing: .2em;
+    font-weight: 700;
+  }
+</style>
