--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
 <ion-tabs color="primary">
-  <ion-tab [root]="tab1Root" tabTitle="Monitor" tabIcon="md-pulse"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Location" tabIcon="ios-map"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="About" tabIcon="md-information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Logs" tabIcon="md-pulse"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="About" tabIcon="md-information-circle"></ion-tab>
 </ion-tabs>
